--- a/notebooks/upload_retrieve_gridfs.ipynb
+++ b/notebooks/upload_retrieve_gridfs.ipynb
@@ -1,43 +1,88 @@
 {
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from pymongo import MongoClient",
-        "import gridfs",
-        "",
-        "# Connect to MongoDB",
-        "client = MongoClient(\"mongodb://rpMongod:Republic$01@mongodb:27017/\")",
-        "db = client[\"image_db\"]",
-        "fs = gridfs.GridFS(db)",
-        "",
-        "# Upload image",
-        "with open(\"example.jpg\", \"rb\") as f:",
-        "    fs.put(f, filename=\"example.jpg\")",
-        "print(\"Image uploaded.\")",
-        "",
-        "# Retrieve image",
-        "file = fs.find_one({\"filename\": \"example.jpg\"})",
-        "with open(\"downloaded_example.jpg\", \"wb\") as f:",
-        "    f.write(file.read())",
-        "print(\"Image downloaded.\")"
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.x"
-    }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "import gridfs\n",
+    "# Connect to MongoDB\n",
+    "client = MongoClient(\"mongodb://rpMongod:Republic$01@mongodb:27017/\")\n",
+    "db = client[\"image_db\"]\n",
+    "fs = gridfs.GridFS(db)\n",
+    "\n"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 2
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image uploaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Upload image\n",
+    "with open(\"RP Logo.png\", \"rb\") as f:    \n",
+    "    fs.put(f, filename=\"RP Logo.png\")\n",
+    "    print(\"Image uploaded.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image downloaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Retrieve image\n",
+    "file = fs.find_one({\"filename\": \"RP Logo.png\"})\n",
+    "with open(\"downloaded_example.jpg\", \"wb\") as f:    \n",
+    "    f.write(file.read())\n",
+    "    print(\"Image downloaded.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
