--- a/notebooks/upload_retrieve_gridfs.ipynb
+++ b/notebooks/upload_retrieve_gridfs.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "# Upload image\n",
     "with open(\"RP Logo.png\", \"rb\") as f:    \n",
-    "    fs.put(f, filename=\"RP Logo.png\")\n",
+    "    fs.put(f, filename=\"RP LOGO.png\")\n",
     "    print(\"Image uploaded.\")"
    ]
   },
