--- a/notebooks/sample-db-connect.ipynb
+++ b/notebooks/sample-db-connect.ipynb
@@ -12,37 +12,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "36487058",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to MySQL\n",
+      "('information_schema',)\n",
+      "('performance_schema',)\n",
+      "('republicdb',)\n",
+      "MySQL connection is closed\n"
+     ]
+    }
+   ],
    "source": [
-    "# ✅ Connect to MySQL\n",
     "import mysql.connector\n",
+    "from mysql.connector import Error\n",
     "\n",
-    "conn = mysql.connector.connect(\n",
-    "    host='mysql',\n",
-    "    user='rpMySQL',\n",
-    "    password='Republic$01',\n",
-    "    database='republicdb',\n",
-    "    port=3306\n",
-    ")\n",
-    "\n",
-    "cursor = conn.cursor()\n",
-    "cursor.execute('SHOW TABLES;')\n",
-    "for table in cursor.fetchall():\n",
-    "    print(table)\n",
-    "\n",
-    "cursor.close()\n",
-    "conn.close()"
+    "try:\n",
+    "    conn = mysql.connector.connect(\n",
+    "        host='mysql',\n",
+    "        user='rpMySQL',\n",
+    "        password='Republic$01',\n",
+    "        database='republicdb',\n",
+    "        port=3306\n",
+    "    )\n",
+    "    if conn.is_connected():\n",
+    "        print(\"Connected to MySQL\")\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute('SHOW DATABASES;')\n",
+    "        for table in cursor.fetchall():\n",
+    "            print(table)\n",
+    "except Error as e:\n",
+    "    print(\"Error while connecting to MySQL:\", e)\n",
+    "finally:\n",
+    "    if conn.is_connected():\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        print(\"MySQL connection is closed\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2c04dcc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collections: []\n"
+     ]
+    }
+   ],
    "source": [
     "# ✅ Connect to MongoDB\n",
     "from pymongo import MongoClient\n",
@@ -52,9 +78,35 @@
     "\n",
     "print('Collections:', db.list_collection_names())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d96c6284-91ac-4487-aec1-fdcf29b92324",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
