--- a/notebooks/sample-db-connect.ipynb
+++ b/notebooks/sample-db-connect.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "36487058",
    "metadata": {},
    "outputs": [
@@ -22,8 +22,10 @@
      "text": [
       "Connected to MySQL\n",
       "('information_schema',)\n",
+      "('mysql',)\n",
       "('performance_schema',)\n",
       "('republicdb',)\n",
+      "('sys',)\n",
       "MySQL connection is closed\n"
      ]
     }
@@ -35,9 +37,10 @@
     "try:\n",
     "    conn = mysql.connector.connect(\n",
     "        host='mysql',\n",
-    "        user='rpMySQL',\n",
+    "       # user='rpMySQL',\n",
+    "        user='root',\n",
     "        password='Republic$01',\n",
-    "        database='republicdb',\n",
+    "        #database='republicdb',\n",
     "        port=3306\n",
     "    )\n",
     "    if conn.is_connected():\n",
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "2c04dcc7",
    "metadata": {},
    "outputs": [
