--- a/notebooks/PandaMongoDB.ipynb
+++ b/notebooks/PandaMongoDB.ipynb
@@ -13,10 +13,10 @@
       "0k1\n",
       "  inventID     item  qty  price\n",
       "0    I0001    pears  100    0.7\n",
-      "1   I0001A    pears  100    0.7\n",
-      "2    I0002   apples  150    1.0\n",
-      "3    I0003  bananas  120    0.8\n",
-      "4    I0004    plums   85    1.2\n",
+      "1    I0002   apples  150    1.0\n",
+      "2    I0003  bananas  120    0.8\n",
+      "3    I0004    plums   85    1.2\n",
+      "4    I0005  papayas   60    1.1\n",
       "OK\n"
      ]
     }
