--- a/notebooks/ReadCSV.ipynb
+++ b/notebooks/ReadCSV.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "27d25c51-fd58-46fe-8011-7287430864cd",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
     "from pathlib import Path\n",
     "\n",
     "# Define the relative path to the CSV file (relative to the notebook location)\n",
-    "relative_path = Path(\"data/.csv\")\n",
+    "relative_path = Path(\"data/student.csv\")\n",
     "\n",
     "# Check if the file exists before reading\n",
     "if relative_path.exists():\n",
