--- a/notebooks/ImageMongodV2.ipynb
+++ b/notebooks/ImageMongodV2.ipynb
@@ -38,7 +38,7 @@
     "from pathlib import Path\n",
     "from datetime import datetime\n",
     "\n",
-    "client = MongoClient(\"mondocker exec -it mongodb mongosh -u rpMongod -p Republic$01 --authenticationDatabase admingodb://rpMongod:Republic$01@mongodb:27017/?authSource=admin\")\n",
+    "client = MongoClient(\"mongodb://rpMongod:Republic$01@mongodb:27017/?authSource=admin\")\n",
     "#Assign a Database name\n",
     "db = client[\"C3649CL15V1\"]\n",
     "#Us Gridfs to convert to binary\n",
@@ -56,9 +56,6 @@
     "print(\"Size:\", img.size)\n",
     "print(\"Mode:\", img.mode)\n",
     "\n",
-    "# EXIF metadata\n",
-    "#with open(file_path, 'rb') as f:\n",
-    "#    tags = exifread.process_file(f)\n",
     "    \n",
     "with open(file_path, 'rb') as f:\n",
     "    file_id = fs.put(\n",
@@ -69,7 +66,6 @@
     "        height=int(img.size[1]),\n",
     "        mode=img.mode,\n",
     "        uploader=\"alice123\",\n",
-    "        #upload_time=datetime.utcnow()\n",
     "    )\n",
     "\n"
    ]
