--- a/notebooks/ImageMongodV2.ipynb
+++ b/notebooks/ImageMongodV2.ipynb
@@ -2,17 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d5f747b4-6c26-4fc1-be39-9a90fbf9a501",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "PNG file does not have exif data.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -20,16 +13,12 @@
       "images/Yang.png\n",
       "Format: PNG\n",
       "Size: (1489, 1035)\n",
-      "Mode: RGBA\n",
-      "No EXIF metadata found.\n",
-      "Date Taken: None\n",
-      "Camera Model: None\n"
+      "Mode: RGBA\n"
      ]
     }
    ],
    "source": [
     "from PIL import Image\n",
-    "import exifread\n",
     "from pathlib import Path\n",
     "import os\n",
     "# Upload an image\n",
