--- a/notebooks/ImageMongod.ipynb
+++ b/notebooks/ImageMongod.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "d5f747b4-6c26-4fc1-be39-9a90fbf9a501",
    "metadata": {},
    "outputs": [
@@ -10,15 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "images/Yang.png\n",
-      "Format: PNG\n",
-      "Size: (1489, 1035)\n",
-      "Mode: RGBA\n"
+      "images/Animal1.jpg\n",
+      "Format: JPEG\n",
+      "Size: (4032, 3024)\n",
+      "Mode: RGB\n",
+      "Date Taken: 2020:11:28 10:53:52\n",
+      "Camera Model: SM-G781B\n"
      ]
     }
    ],
    "source": [
     "from PIL import Image\n",
+    "import exifread\n",
     "from pathlib import Path\n",
     "import os\n",
     "# Upload an image\n",
@@ -34,7 +37,7 @@
     "fs = gridfs.GridFS(db)\n",
     "\n",
     "images_dir = Path(\"images\")\n",
-    "filename = 'Yang.png'\n",
+    "filename = 'Animal1.jpg'\n",
     "#Show where is image is stored\n",
     "file_path = os.path.join(images_dir, filename)\n",
     "\n",
@@ -45,8 +48,13 @@
     "print(\"Size:\", img.size)\n",
     "print(\"Mode:\", img.mode)\n",
     "\n",
+    "# EXIF metadata\n",
+    "#with open(file_path, 'rb') as f:\n",
+    "#    tags = exifread.process_file(f)\n",
     "    \n",
     "with open(file_path, 'rb') as f:\n",
+    "    tags = exifread.process_file(f)\n",
+    "            \n",
     "    file_id = fs.put(\n",
     "        f, \n",
     "        filename=filename,\n",
@@ -54,45 +62,19 @@
     "        width=int(img.size[0]),\n",
     "        height=int(img.size[1]),\n",
     "        mode=img.mode,\n",
+    "        date_taken=str(tags.get('EXIF DateTimeOriginal', 'N/A') ),\n",
     "        uploader=\"alice123\",\n",
+    "        #upload_time=datetime.utcnow()\n",
     "    )\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5f18466d-f3af-4201-815d-556bf0f0a0a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Yang-DL.png\n",
-      "Image downloaded.\n"
-     ]
-    }
-   ],
-   "source": [
-    "name, ext = os.path.splitext(filename)\n",
     "\n",
-    "# Create the new filename\n",
-    "new_filename = f\"{name}-DL{ext}\"\n",
-    "\n",
-    "print(new_filename)\n",
-    "# Retrieve image\n",
-    "file = fs.find_one({\"filename\": filename})\n",
-    "file_path_out = os.path.join(images_dir, new_filename)\n",
-    "with open(file_path_out, \"wb\") as f:    \n",
-    "    f.write(file.read())\n",
-    "    print(\"Image downloaded.\")"
+    "print(\"Date Taken:\", tags.get('EXIF DateTimeOriginal'))\n",
+    "print(\"Camera Model:\", tags.get('Image Model'))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d33fa665-192f-4944-8513-aecaa9fd6aee",
+   "id": "5f18466d-f3af-4201-815d-556bf0f0a0a3",
    "metadata": {},
    "outputs": [],
    "source": []
