--- a/notebooks/SQLAlchemy.ipynb
+++ b/notebooks/SQLAlchemy.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "7f587332-bc66-4812-a1a4-259a512bc950",
+   "execution_count": 1,
+   "id": "459410db-e51f-41e3-82d4-a451ee2a68e0",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Successfully loaded 'student' table into DataFrame.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2071/2426425234.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df_student = pd.read_sql(query, con=conn)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -177,38 +162,40 @@
     }
    ],
    "source": [
-    "import mysql.connector\n",
     "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import text\n",
     "\n",
-    "# Connect to the MySQL container via its service name\n",
-    "try:\n",
-    "    conn = mysql.connector.connect(\n",
-    "        host='mysql',              # This matches the MySQL service name in docker-compose.yml\n",
-    "        user='rpLesson15',\n",
-    "        password='Republic$01',\n",
-    "        database='rp_schema',\n",
-    "        port=3306\n",
-    "    )\n",
+    "# Connection parameters\n",
+    "DB_USER = \"rpLesson15\"\n",
+    "DB_PASSWORD = \"Republic$01\"\n",
+    "DB_HOST = \"mysql\"     # Docker Compose service name for MySQL\n",
+    "DB_PORT = 3306\n",
+    "DB_NAME = \"rp_schema\"\n",
     "\n",
-    "    # Query the student table\n",
-    "    query = \"SELECT * FROM student\"\n",
-    "    df_student = pd.read_sql(query, con=conn)\n",
+    "# Correct connection string using pymysql\n",
     "\n",
-    "    print(\"Successfully loaded 'student' table into DataFrame.\")\n",
-    "    display(df_student)\n",
+    "connection_url = f\"mysql+pymysql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}\"\n",
     "\n",
-    "except mysql.connector.Error as err:\n",
-    "    print(f\" MySQL Error: {err}\")\n",
+    "engine = create_engine(connection_url, pool_pre_ping=True)\n",
+    "# Test connection\n",
     "\n",
-    "finally:\n",
-    "    if 'conn' in locals() and conn.is_connected():\n",
-    "        conn.close()\n"
+    "\n",
+    "# Establish a connection\n",
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(text(\"SELECT * FROM student\"))\n",
+    "    rows = result.fetchall()\n",
+    "    columns = result.keys()\n",
+    "\n",
+    "# Load into pandas manually\n",
+    "df_student = pd.DataFrame(rows, columns=columns)\n",
+    "display(df_student)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d444b8f-e589-4026-8100-37c4bde22d83",
+   "id": "4cff6779-fa80-434a-bb39-99912f6aebdc",
    "metadata": {},
    "outputs": [],
    "source": []
