--- a/notebooks/imgMongoDBDownload.ipynb
+++ b/notebooks/imgMongoDBDownload.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d5f747b4-6c26-4fc1-be39-9a90fbf9a501",
+   "execution_count": 1,
+   "id": "fa691834-a15e-42bc-a427-c3f6319aba43",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "images/Yang.png\n",
-      "Format: PNG\n",
-      "Size: (1489, 1035)\n",
-      "Mode: RGBA\n"
+      "Yang-DL.png\n",
+      "Image downloaded.\n"
      ]
     }
    ],
@@ -36,50 +34,25 @@
     "images_dir = Path(\"images\")\n",
     "filename = 'Yang.png'\n",
     "#Show where is image is stored\n",
-    "file_path = os.path.join(images_dir, filename)\n",
     "\n",
-    "print (file_path)\n",
-    "# Image dimensions and format\n",
-    "img = Image.open(file_path)\n",
-    "print(\"Format:\", img.format)\n",
-    "print(\"Size:\", img.size)\n",
-    "print(\"Mode:\", img.mode)\n",
+    "name, ext = os.path.splitext(filename)\n",
     "\n",
-    "    \n",
-    "with open(file_path, 'rb') as f:\n",
-    "    file_id = fs.put(\n",
-    "        f, \n",
-    "        filename=filename,\n",
-    "        format_type=str(img.format),\n",
-    "        width=int(img.size[0]),\n",
-    "        height=int(img.size[1]),\n",
-    "        mode=img.mode,\n",
-    "        uploader=\"alice123\",\n",
-    "    )\n",
-    "\n"
+    "# Create the new filename\n",
+    "new_filename = f\"{name}-DL{ext}\"\n",
+    "\n",
+    "print(new_filename)\n",
+    "# Retrieve image\n",
+    "file = fs.find_one({\"filename\": filename})\n",
+    "file_path_out = os.path.join(images_dir, new_filename)\n",
+    "with open(file_path_out, \"wb\") as f:    \n",
+    "    f.write(file.read())\n",
+    "    print(\"Image downloaded.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5f18466d-f3af-4201-815d-556bf0f0a0a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Yang-DL.png\n",
-      "Image downloaded.\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "d33fa665-192f-4944-8513-aecaa9fd6aee",
+   "id": "e717a4b0-477c-4928-9731-9ec5331cf9c7",
    "metadata": {},
    "outputs": [],
    "source": []
